--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,10 @@ name = "tests"
 anyhow = "1.0.100"
 downcast-rs = "2.0.2"
 erased-serde = "0.4.9"
+ron = "0.12.0"
 serde = {version ="1.0.228", features=["derive"]}
 
 [dev-dependencies]
-insta = {version = "1.46.0", features = ["yaml", "glob"]}
+insta = {version = "1.46.0", features = ["yaml", "glob", "ron"]}
 rstest = "0.26.1"
 xmlwriter = "0.1.0"
