--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
+    "rust-analyzer.imports.granularity.enforce": true,
+    "editor.formatOnSave": true,
+    "rust-analyzer.rustfmt.overrideCommand": ["rustfmt", "+nightly", "--unstable-features", "--config", "imports_granularity=Crate,group_imports=StdExternalCrate"]
     
 }
