--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,11 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.100"
+downcast-rs = "2.0.2"
 erased-serde = "0.4.9"
 ron = "0.12.0"
 serde = {version ="1.0.228", features=["derive", "rc"]}
+type-equalities = "0.3.1"
 
 [dev-dependencies]
 insta = {version = "1.46.0", features = ["yaml", "glob", "ron"]}
