chore: fixup workspace, enforce single version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,8 @@ members = ["nockyc"]
 resolver = "3"
 
 [workspace.metadata.release]
-tag-prefix = "{{crate_name}}/"
+shared-version = true
+tag-name = "v{{version}}"
 
 # The profile that 'dist' will build with
 [profile.dist]
