--- a/akynoc/Cargo.toml
+++ b/akynoc/Cargo.toml
@@ -8,7 +8,7 @@ description = "Akyno Compiler"
 [dependencies]
 anyhow = "1.0.100"
 ariadne = "0.6.0"
-chumsky = { version = "0.12.0", features = ["bytes", "pratt"] }
+chumsky = { version = "0.12.0", features = ["bytes", "memoization", "pratt"] }
 clap = { version = "4.5.54", features = ["derive"] }
 internment = { version = "0.8.6", features = ["arena", "serde"] }
 logos = "0.16.0"
