--- a/akynoc/Cargo.toml
+++ b/akynoc/Cargo.toml
@@ -16,7 +16,7 @@ ron = "0.12.0"
 serde = {version ="1.0.228", features=["derive", "rc"]}
 
 [dev-dependencies]
-insta = {version = "1.46.0", features = ["yaml", "glob", "ron"]}
+insta = {version = "1.46.0", features = ["yaml", "glob", "ron", "redactions"]}
 rstest = "0.26.1"
 tempfile = "3.24.0"
 
