--- a/akynoc/Cargo.toml
+++ b/akynoc/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "akynoc"
-version = "0.1.0-alpha.2"
+version = "0.1.0"
 license = "MIT OR Apache-2.0"
 edition = "2024"
 repository = "https://github.com/anoaky/akyno"
